# sharyo-discord-bot

./: pyproject.toml
fastapi_backend/: llm_manager.py  main.py
fastapi_backend/bot_handler/: discord_bots.py
